2003-08-09  Niklas Knutsson  <nq@altern.org>

	* Fix prefixes in expression
	* Added ability to disable unknown variables
	* Support unsolved function -- now log(x) returns log(x) instead of the result of log(0)
	* Fix prefix display mode (only use in front of units to avoid confusion and support exponents)

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Set LC_NUMERIC to "C" to make strold() happy
	* Minor restructuring in preparation for different decimal points
	* Comment out debug output. Now (x+y)^50 takes 1 instead of 100 seconds.
	  For those interested, the result of (x+y)^100 is 24287 pixels wide...

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/interface.cc: glade-ified the preferences dialog

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/interface.cc: glade-ified the units dialog
	* po/de.po: updated translation

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* src/interface.cc: removed unneccessary variables

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/interface.cc: glade-ified the variables dialog

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* src/interface.cc: removed unneccessary variables

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/callbacks.cc,
	* src/interface.cc: finished moving the menus

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/callbacks.cc,
	* src/interface.cc: moving the menus to a (hidden) menubar to
	solve a warning regarding an accelerator group

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Move generated menus one step up
	* Add finalize() after conversion in callbacks.cc

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Some more fixes that I do not remember
	* Fix (x+y)^(6+n)
	* Fix kWs = W^2 * s^2 in Calculator.cc
	* Do not convert units during the whole calculation, do it in finalize() afterwards instead
	* Make units work even better.