@@ -47,7 +47,7 @@
 *BuiltinFunction	stddev	Statistics	Standard Deviation	0
 *BuiltinFunction	stddevs	Statistics	Standard Deviation (random sampling)	0
 *BuiltinFunction	rand	General	Random Number	Generates a pseudo-random number between 0 and 1
-*BuiltinFunction	BASE	Number Bases	Number Base	Returns a decimal integer from a number of specified base between 2 and 36	Number
+*BuiltinFunction	BASE	Number Bases	Number Base	Returns a decimal integer from a number of specified base between 2 and 36	Number	Base
 *BuiltinFunction	BIN	Number Bases	Binary	Returns a decimal integer from a binary number	Binary number
 *BuiltinFunction	OCT	Number Bases	Octal	Returns a decimal integer from an octal number	Octal number
 *BuiltinFunction	HEX	Number Bases	Hexadecimal	Returns a decimal value from a hexadecimal number	Hexadecimal number
