@@ -19,7 +19,8 @@ typedef enum {
 	NUMBER_FORMAT_EXP_PURE,
 	NUMBER_FORMAT_PREFIX,
 	NUMBER_FORMAT_HEX,
-	NUMBER_FORMAT_OCTAL
+	NUMBER_FORMAT_OCTAL,
+	NUMBER_FORMAT_BIN
 } NumberFormat;
 
 typedef enum {
